--- a/SimTECH/SimTECH/Pages/Seasons/Overview/EntrantWizard/Steps/EditDrivers.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/EntrantWizard/Steps/EditDrivers.razor
@@ -70,7 +70,7 @@
     private Func<int, string?> _numberValidation => number =>
     {
         if (Model.SeasonDrivers.Any(e => e.Number == number))
-            return $"Number {number} is already in use, pick something else pl0x.";
+            return $"Number {number} is already in use, pick something else mate.";
 
         return null;
     };
@@ -91,62 +91,6 @@
         driver.Defense = setup.Entrant.Defense;
 
         // Team assignment happens in a following step
-        // Maybe assign number dependant on whether personal numbers are allowed?
+        // TODO: Maybe assign number dependant on whether personal numbers are allowed?
     }
-
-    // OBSOLETE: Yoinked below out of the editing template since fuck the editing template
-    /*<RowEditingTemplate>
-                <MudTd DataLabel="Name">
-                    <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
-                        <MudText>@context.Driver?.FullName</MudText>
-                        <MudSpacer />
-                        <CountryFlag Code="@context.Driver?.Country" Size="ElementSize.Small" />
-                </MudStack>
-                </MudTd>
-                <MudTd DataLabel="Number">
-                    <MudNumericField @bind-Value="@context.Number" />
-                </MudTd>
-                <MudTd DataLabel="TeamRole">
-                    <MudSelect T="TeamRole" @bind-Value="@context.TeamRole">
-                        @foreach (var select in TeamRoleEnumHelper.GetTeamRoleSelection)
-                            {
-                            <MudSelectItem Value="select.Key">@select.Value</MudSelectItem>
-                    }
-                </MudSelect>
-                </MudTd>
-                    <MudTd>
-                    @if (context.PastSetups?.Count > 0)
-                        {
-                        <MudSelectExtended T="PreviousEntrantSetup<SeasonDriver>"
-                                           ItemCollection="@context.PastSetups"
-                                           Label="Past configuration of driver"
-                                           Variant="Variant.Outlined"
-                                           ValueChanged="@((PreviousEntrantSetup<SeasonDriver> setup) => OnSelectedPastSetup(context, setup))"
-                                           ToStringFunc="@_previousToString">
-                            <ItemTemplate Context="setup">
-                                <div class="select-detail-block">
-                                    <MudText Typo="Typo.subtitle1">@setup.Value.LeagueName - @setup.Value.SeasonYear</MudText>
-                                    <div class="select-detail-configured">
-                                        <span>NO: @setup.Value.Entrant.Number</span>
-                                        <span>SKL: @setup.Value.Entrant.Skill</span>
-                                        <span>REL: @setup.Value.Entrant.Reliability</span>
-                                        <span>ATT: @setup.Value.Entrant.Attack</span>
-                                        <span>DEF: @setup.Value.Entrant.Defense</span>
-                                </div>
-                            </div>
-                        </ItemTemplate>
-                        </MudSelectExtended>
-                    }
-                    else
-                        {
-                        <MudText>No past configs</MudText>
-                }
-            </MudTd>
-            </RowEditingTemplate>
-            <EditButtonContent Context="button">
-                <MudIconButton Size="Size.Small"
-                               Icon="@Icons.Material.Outlined.Edit"
-                               Class="pa-0"
-                               OnClick="@button.ButtonAction" />
-            </EditButtonContent>*/
 }
