Jotted down some more inspiration since I got inspired... again

--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Development/Components/DevelopSettings.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Development/Components/DevelopSettings.razor
@@ -62,10 +62,14 @@
 </MudStack>
 
 @code {
-    [CascadingParameter] public DevelopModel DevelopModel { get; set; }
+    [CascadingParameter]
+    public DevelopModel DevelopModel { get; set; }
 
-    [Parameter] public List<RaceClass>? RaceClasses { get; set; }
-    [Parameter] public EventCallback<bool> OnChipChanged { get; set; }
+    [Parameter]
+    public List<RaceClass>? RaceClasses { get; set; }
+
+    [Parameter]
+    public EventCallback<bool> OnChipChanged { get; set; }
 
     private void RaceClassChipChanged(MudChip? classChip)
     {
