cleaned up sum code

--- a/SimTECH/SimTECH/Pages/Seasons/Index.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Index.razor
@@ -87,7 +87,7 @@
 
     protected override async Task OnInitializedAsync()
     {
-        _bread.Reset();
+        //_bread.Reset();
         _bread.SetBreadcrumbs(new List<BreadcrumbItem>()
         {
             new BreadcrumbItem("Home", href: ""),
