--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Dialogs/TraitChanger.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Dialogs/TraitChanger.razor
@@ -16,5 +16,5 @@
     [CascadingParameter]
     protected MudDialogInstance? TraitDialog { get; set; }
 
-
+    // TODO: wtf is this, at least make a comment what the idea here was in the first place
 }
