--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Development/Dialogs/SeasonDevelopChartDialog.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Development/Dialogs/SeasonDevelopChartDialog.razor
@@ -36,7 +36,8 @@
 </MudDialog>
 
 @code {
-    [CascadingParameter] protected MudDialogInstance? ChartDialog { get; set; }
+    [CascadingParameter]
+    protected MudDialogInstance? ChartDialog { get; set; }
 
     [Parameter]
     public List<ChartData> DataSets { get; set; } = new();
