--- a/SimTECH/SimTECH/Pages/Traits/AssignmentLegacy/Index.razor
+++ b/SimTECH/SimTECH/Pages/Traits/AssignmentLegacy/Index.razor
@@ -40,7 +40,8 @@
                         </MudSelect>
                     }
 
-                    <MudButton Variant="Variant.Outlined" Color="Color.Secondary" OnClick="LoadEntrants" Disabled="@(entrantChip == null)">Load</MudButton>
+                    <MudButton Variant="Variant.Outlined" Color="Color.Secondary" OnClick="LoadEntrants"
+                               Disabled="@(entrantChip == null)">Load</MudButton>
 
                     <MudText Typo="Typo.h5" Class="mt-2">Assignment settings</MudText>
                     <MudDivider />
