--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -594,9 +594,9 @@ th {
     width: 100%;
 }
 
-.trait-assignment-menu-bar {
+/*.trait-assignment-menu-bar {
     width: 100%;
-}
+}*/
 
 /* dialogs */
 .additional-dialog-controls {
