--- a/SimTECH/SimTECH/Shared/MainLayout.razor
+++ b/SimTECH/SimTECH/Shared/MainLayout.razor
@@ -65,7 +65,7 @@
         </MudDrawerHeader>
         <NavMenu />
     </MudDrawer>
-    <MudMainContent id="sim-page-content">
+    <MudMainContent id="sim-page-content" Class="main-content">
         @Body
     </MudMainContent>
 </MudLayout>
