--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -577,6 +577,10 @@ th {
 }
 
 /* pages & containers */
+.main-content {
+    height: 100vh;
+}
+
 .layout-appbar {
     border-bottom: 1px solid var(--mud-palette-primary);
 }
@@ -593,10 +597,6 @@ th {
     height: 100%;
     width: 100%;
 }
-
-/*.trait-assignment-menu-bar {
-    width: 100%;
-}*/
 
 /* dialogs */
 .additional-dialog-controls {
@@ -694,10 +694,6 @@ th {
     }
 
 /* special */
-.cubic-repeat-bg {
-    background: url('../images/mmmotif.svg') repeat;
-}
-
 .header-special {
     font-family: ShogunsClan !important;
     font-size: 3em;
