--- a/SimTECH/SimTECH/Pages/RaceWeek/Tabs/PostRace.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Tabs/PostRace.razor
@@ -72,7 +72,7 @@
                             }
                             else
                             {
-                                <div class="result-cell" style="@context.Status.StatusStyles()">
+                                <div class="result-cell mx-auto" style="@context.Status.StatusStyles()">
                                     <ResultLabel Text="@context.Status.ReadableStatus()" />
                                 </div>
                             }
