--- a/SimTECH/SimTECH/Pages/Traits/Assignment/Index.razor.css
+++ b/SimTECH/SimTECH/Pages/Traits/Assignment/Index.razor.css
@@ -14,3 +14,13 @@
     flex-direction: column;
     gap: 12px;
 }
+
+.setting-double-field-wrapper {
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
+}
+
+.setting-double-field-wrapper > * {
+    flex: 1;
+}
